# cfd-advisor

./: .gitattributes  .gitignore  CLAUDE.md  README.md  SPEC.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml  greetings.yml
data/: events.yaml
scripts/: capture_fixtures.py  generate_synthetic_fixtures.py
src/advisor/: __init__.py  advise.py  cli.py  config.py  render.py
src/advisor/analysis/: events.py  indicators.py  signal.py
src/advisor/datasource/: base.py  yfinance_provider.py
src/advisor/integrations/: __init__.py
src/advisor/integrations/trading212/: __init__.py  client.py  config.py  errors.py  models.py  transport.py
src/advisor/journal/: store.py
src/advisor/strategy/: models.py  risk.py
src/advisor/ui/: app.py  chart.py
tests/: _spec_blind_helpers.py  conftest.py  test_advise.py  test_cli.py  test_config.py  test_datasource.py  test_events.py  test_indicator_snapshot.py  test_indicators.py  test_journal.py  test_models.py  test_plan.py  test_render.py  test_risk.py  test_signal.py  test_spec_blind_ac1_cli_e2e.py  test_spec_blind_ac2_blackout.py  test_spec_blind_ac3_ui_smoke.py  test_spec_blind_inv3_cli.py  test_ui.py  test_ui_chart.py
tests/fixtures/: GLD_daily.csv  README.md  SPY_daily.csv
tests/fixtures/trading212/: account_summary_malformed.json  account_summary_ok.json  portfolio_malformed.json  portfolio_ok.json
tests/integrations/trading212/: test_client.py  test_config.py  test_isolation.py  test_models.py  test_spec_blind.py  test_transport.py
