[project]
name = "advisor"
version = "0.1.0"
description = "Index CFD Trade Advisor — analysis & suggestion tool for stop-loss-protected CFD trades on index ETFs. No auto-trading."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "pandas",
    "yfinance",
    "streamlit",
    "typer",
    "pyyaml",
]

[project.scripts]
advisor = "advisor.cli:app"

[dependency-groups]
dev = [
    "pytest",
    "pytest-timeout>=2.4.0",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/advisor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".claude/worktrees", ".venv", ".git"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
extend-exclude = [".claude/worktrees"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
